# HealthCare

./: .gitignore  REACT_README.md  README.md  SystemPrompt.py  bot.py  botVision.py  package-lock.json  package.json  pyproject.toml  server.py  start_dev.sh  vercel.json
public/: index.html
src/: App.js  index.css  index.js
src/components/: AdvancedCameraControls.js  CameraControls.js  CameraPresets.js  ConnectionStatus.js  VideoCall.js
src/components/clinic/: DiseasesGrid.js  HumanSilhouette.js  PhoneStage.js  RightAnalytics.js  StatsPanel.js
src/components/ui/: EKGLine.js  HUDBar.js  MetricDial.js  NeonButton.js  NeonCard.js  ParticleLayer.js  SessionTimeline.js  SuggestionChips.js  VitalsBars.js
src/hooks/: useCameraSettings.js
src/pages/: Dashboard.js  Login.js  Signup.js
src/services/: pipecatService.js
src/theme/: neonTheme.js
