[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Quickstart example for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.11.0",
    "pipecat-ai[cartesia,daily,deepgram,elevenlabs,heygen,local-smart-turn-v3,openai,runner,silero,webrtc,whisper]>=0.0.83",
    "pipecatcloud>=0.2.4",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
